--- a/alesha.html
+++ b/alesha.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1>Алеша Попович и Тугарин Змей</h1>
-		<img src="media/Без названия (3).jpg">
+		<img src="Без названия (3).jpg">
 		<text>Год производства
 2004
 Страна
